# vale-ai-tells

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .rumdl.toml  .vale-test.ini  .vale.ini  .yamllint.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  EXPERIMENTAL.md  Justfile  README.md  TODO.md  cog.toml  cspell.json  pyproject.toml  setup.cfg  test-commit-messages.md  test-document.md  test-false-positives.md
.claude/skills/doc-lint/: SKILL.md
.github/workflows/: lint.yml  release.yml
styles/ai-tells/: AICompoundPhrases.yml  AffirmativeFormulas.yml  ClosingPleasantries.yml  ConclusionMarkers.yml  ContrastiveFormulas.yml  DefensiveHedges.yml  EmDashUsage.yml  EmphaticCopula.yml  FalseBalance.yml  FillerPhrases.yml  FormalRegister.yml  FormalTransitions.yml  HedgingPhrases.yml  Metacommentary.yml  MicDrop.yml  OpeningCliches.yml  OrganicConsequence.yml  OverusedVocabulary.yml  PassiveMetacommentary.yml  RestatementMarkers.yml  RhetoricalDevices.yml  SelfReference.yml  StackedAnaphora.yml  SycophancyMarkers.yml  VerbTricolon.yml
styles/ai-tells-commits/: CommitBuzzwords.yml  CommitEmoji.yml  CommitHedging.yml  CommitOverexplanation.yml  CommitSelfReference.yml  CommitTrailingJustification.yml
styles/ai-tells-experimental/: AverageSentenceLength.yml  ComplexWordDensity.yml  ContentDuplication.yml  ContractionAvoidance.yml  HeadingTitleCase.yml  LongWordDensity.yml  ParagraphLengthVariance.yml  SentenceLengthVariance.yml  SentenceStartEntropy.yml  SentenceStartRepetition.yml  TransitionRepetition.yml  TricolonDensityDocument.yml  VocabularySwap.yml
(+10 files in other folders)
