[project]
name = "vale-ai-tells"
version = "0.1.0"
description = "Vale package for detecting AI-generated prose patterns"
requires-python = ">=3.13"

[dependency-groups]
dev = [
    "codespell>=2.4",
    "rumdl>=0.1",
    "vale>=3.13",
    "yamllint>=1.37",
]

[tool.codespell]
skip = ".git,uv.lock,*styles/Google*,*styles/proselint*,*styles/write-good*,*.worktrees*"
# nd/ore/ake/ot/ure: regex character-class fragments in Vale rule patterns (e.g. [Aa]nd -> nd)
# irregardless: intentional non-word referenced in vocabulary files and rules
ignore-words-list = "nd,ore,ake,ot,ure,irregardless"
